# Coroutine-lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: mycoroutineConfig.cmake.in
docs/: 01_project_overview.md  02_architecture_design.md  03_module_breakdown.md  04_core_mechanisms.md  05_usage_examples.md  06_optimization_roadmap.md  07_resume_and_interview.md  ARCHITECTURE.md  DESIGN.md  IMPROVEMENTS.md  KNOWN_LIMITATIONS.md  MODULES.md  RESUME.md  TEST.md  TEST_REPORT.md  UPGRADE_LOG.md  USAGE.md  WORKFLOW.md  优化总结与注意事项.md  优化路线.md  使用指南.md  再开发问题复盘报告.md  升级记录.md  已知限制与边界.md  架构设计.md  架构设计说明.md  核心流程.md  核心流程说明.md  核心设计与优化方案.md  模块职责.md  模块职责说明.md  测试报告.md  测试用例.md  测试用例与验证说明.md  简历与面试表达指南.md  编译运行与使用说明.md  问题排查与修复记录.md  面试手册.md  面试讲解与问答手册.md  高级特性设计.md
docs/maintenance/: 2026-03-06_issue_audit_and_fix_plan.md
examples/: CMakeLists.txt  coroutine_http_server.cpp
include/mycoroutine/: context.h  coroutine_pool.h  fd_manager.h  fiber.h  iomanager.h  scheduler.h  sync.h
src/: context_switch_aarch64.S  context_switch_x86_64.S  coroutine_pool.cpp  fd_manager.cpp  fiber.cpp  hook.cpp  iomanager.cpp  scheduler.cpp  timer.cpp
tests/: CMakeLists.txt
tests/bench/: main.cpp
tests/hook/: main.cpp
tests/nested/: main.cpp
tests/policy/: main.cpp
tests/pool/: main.cpp
tests/shared_stack/: main.cpp
tests/smoke/: main.cpp
tests/stress/: main.cpp
tests/sync/: main.cpp
